--- a/13_securitynightmare/index.html
+++ b/13_securitynightmare/index.html
@@ -46,6 +46,34 @@
 						</textarea>
 				</section>
 
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### "British Airways"
+
+						</textarea>
+				</section>
+
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### "Google Plus"
+
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### "Marriott International"
+
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### "MyHeritage"
+
+						</textarea>
+				</section>
 
 				<section data-markdown data-background-color="#79B635">
 					<textarea data-template>
