--- a/13_securitynightmare/index.html
+++ b/13_securitynightmare/index.html
@@ -42,14 +42,56 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### "Data Breachs" in 2018
-							<img src="images/13_securitynightmare/databreach.png" style="background:none; border:none; box-shadow:none;">
+							<img src="images/13_securitynightmare/databreaches.png" style="background:none; border:none; box-shadow:none;">
 						</textarea>
 				</section>
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### "British Airways"
+							### "British Airways" - 1
+							- Was ist passiert? "personal and financial details" zwischen August und September 2018 gestohlen über die App und Website
+							- Anzahl? 380,000 Datensätze
+						</textarea>
+				</section>
 
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### "British Airways" - 2
+							"very sophisticated, malicious criminal" attackieren Schnittstelle zwischen BA und Payment Service Provider
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### "British Airways" - 3
+							- Wenig technische Details zum Ablauf von BA
+							- Analyse durch IT Security Experten
+							- "digital Creditcard Skimming" by Magecart Gruppe
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### "British Airways" - 4
+							<img src="images/13_securitynightmare/ba_1.png" style="background:none; border:none; box-shadow:none;">
+							<img src="images/13_securitynightmare/ba_2.png" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### "British Airways" - 5
+							<img src="images/13_securitynightmare/ba_3.png" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### "British Airways" - 6
+							- Takeaway:
+								- vorbildliche Kommunikation an betroffene Kunden (Website, Callcenter, ...)
+								- Ausgabe von neuen Karten
+							- Angriff verhinden?
 						</textarea>
 				</section>
 
@@ -86,7 +128,13 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Quellenverzeichnis
-							List of data breaches: https://en.wikipedia.org/wiki/List_of_data_breaches
+							- List of data breaches: https://en.wikipedia.org/wiki/List_of_data_breaches
+							- Case "British Airways":
+							  - https://www.britishairways.com/en-us/information/incident/data-theft/latest-information
+							  - https://www.reuters.com/article/us-iag-cybercrime-british-airways/ba-apologizes-after-380000-customers-hit-in-cyber-attack-idUSKCN1LM2P6
+							  - https://www.riskiq.com/blog/labs/magecart-british-airways-breach/
+							  - https://www.computerworlduk.com/security/magecart-who-what-is-behind-british-airways-attack-3683768/
+
 						</textarea>
 				</section>
 
