--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -4,12 +4,14 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>ESEC1 - Intro (2018/2019)</title>
+		<title>ESEC1 - Intro (2019/2020)</title>
 
+		<link rel="stylesheet" href="css/reset.css">
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/white.css">
-		<link rel="stylesheet" href="lib/css/zenburn.css">
-		<!-- <link rel="stylesheet" href="css/reveal-override.css"/> -->
+
+		<!-- Theme used for syntax highlighting of code -->
+		<link rel="stylesheet" href="lib/css/monokai.css">
 
 		<!-- Printing and PDF exports -->
 		<script>
@@ -23,11 +25,10 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-
 				<section data-markdown data-background-color="#79B635">
 					<textarea data-template>
 							### E-Security 1 - Vorstellung
-							#### Wintersemester 2018/2019
+							#### Wintersemester 2019/2020
 							FH JOANNEUM
 						</textarea>
 				</section>
@@ -38,7 +39,7 @@
 							- DI (FH) Josef Tschiggerl
 							- externer Lehrbeauftragter
 							- Absolvent IMA05 an der FH Joanneum
-							- ~9 Jahre bei Wirecard CEE als Team Lead Operation Engineer
+							- ~10 Jahre bei Wirecard CEE als Team Lead Operation Engineer
 						</textarea>
 				</section>
 
@@ -78,23 +79,21 @@
 							<img src="images/01_intro/wordcloud1.png" style="background:none; border:none; box-shadow:none;">
 						</textarea>
 				</section>
-
 			</div>
 		</div>
 
-		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
 
 		<script>
+			// More info about config & dependencies:
+			// - https://github.com/hakimel/reveal.js#configuration
+			// - https://github.com/hakimel/reveal.js#dependencies
 			Reveal.initialize({
-				controls: false,
-				progress: true,
-				slideNumber: true,
 				dependencies: [
 					{ src: 'plugin/markdown/marked.js' },
 					{ src: 'plugin/markdown/markdown.js' },
 					{ src: 'plugin/notes/notes.js', async: true },
-					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+					{ src: 'plugin/highlight/highlight.js', async: true }
 				]
 			});
 		</script>
