update/cleanup for 2019/2020

--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -39,7 +39,7 @@
 							- DI (FH) Josef Tschiggerl
 							- externer Lehrbeauftragter
 							- Absolvent IMA05 an der FH Joanneum
-							- ~10 Jahre bei Wirecard CEE als Team Lead Operation Engineer
+							- ~10 Jahre bei Wirecard CEE als Team Lead SD Austria
 						</textarea>
 				</section>
 
@@ -47,7 +47,7 @@
 					<textarea data-template>
 							### E-Security 1 @ AIM
 							- 2 SWS -> 2 ECTS
-							- Integrierte Lehrveranstaltung mit Vorlesungen und Übungen
+							- Integrierte Lehrveranstaltung mit Vorlesungen und Übungen (Lab)
 							- Benotung über Mitarbeit, Präsentationen und Ausarbeitungen
 							- Slides/Übersicht auf https://github.com/joseftsch/esec1
 						</textarea>
@@ -60,7 +60,8 @@
 							- Sicherheitsmanagement
 							- Normen und Zertifizierungen (ISO 27k Serie, BSI, VdS 3473, PCI)
 							- Bedrohungsklassifizierung und Risikoanalyse
-							- "Tools of the trade"
+							- Security Nightmare
+							- "Tools of the trade" (Security Scanning)
 							- Abschlussübung
 						</textarea>
 				</section>
@@ -75,7 +76,6 @@
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### Tag Cloud und Buzzwords
 							<img src="images/01_intro/wordcloud1.png" style="background:none; border:none; box-shadow:none;">
 						</textarea>
 				</section>
