--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -49,6 +49,7 @@
 							- 2 SWS -> 2 ECTS
 							- Integrierte Lehrveranstaltung mit Vorlesungen und Übungen (Lab)
 							- Benotung über Mitarbeit, Präsentationen und Ausarbeitungen
+							  - Abgabe an FH-Mail
 							- Slides/Übersicht auf https://github.com/joseftsch/esec1
 						</textarea>
 				</section>
