--- a/04_sicherheitsmanagement_ue/index.html
+++ b/04_sicherheitsmanagement_ue/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>ESEC1 - Sicherheitsmanagement - Übung (2018/2019)</title>
+		<title>ESEC1 - Sicherheitsmanagement - Übung (2019/2020)</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/white.css">
@@ -27,15 +27,16 @@
 				<section data-markdown data-background-color="#79B635">
 					<textarea data-template>
 							### E-Security 1 - Sicherheitsmanagement - Übung
-							#### Wintersemester 2018/2019
+							#### Wintersemester 2019/2020
 							FH JOANNEUM
 						</textarea>
 				</section>
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### Gruppenarbeit (2er oder 3er Teams)
+							### Gruppenarbeit (3er Teams)
 							- Erstellen einer Generellen-, Abteilungs- ODER Ablauf-Policy
+							  - Fertig für MA zur Unterschrift
 							- Erstellen eines "Awareness Training" (Präsentation)
 							- Vorbereitungszeit: 45 Minuten
 							- Anschließend: "Awareness Training für ihre Mitarbeiter" (Dauer ca. 5 Minuten)
@@ -50,7 +51,7 @@
 							- "Wunsch-Firma" in IT-Branche
 							- Keine Policies (-Teile) kopieren/abschreiben
 							- Selbstorganisation - keine zwei thematisch gleichen Policies
-							- Abgabe Präsentation und Policy als PDF (Namen aller Personen im Team nicht vergessen) via E-Mail am 19.10.2018
+							- Abgabe Präsentation und Policy als PDF (Namen aller Personen im Team nicht vergessen) via E-Mail bis 11.10.2018
 							- Vorwissen für Präsentation: Technisch versiert aber kein Detail-Wissen über Thematik
 						</textarea>
 				</section>
@@ -58,7 +59,7 @@
 				<section data-markdown data-background-color="#79B635">
 					<textarea data-template>
 							### E-Security 1 - Sicherheitsmanagement - Übung
-							#### Wintersemester 2018/2019
+							#### Wintersemester 2019/2020
 							FH JOANNEUM
 						</textarea>
 				</section>
