add pci ue and sec mgmt vo

--- a/06_pci_ue/index.html
+++ b/06_pci_ue/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>ESEC1 - PCI DSS - Übung (2018/2019)</title>
+		<title>ESEC1 - PCI DSS - Übung (2019/2020)</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/white.css">
@@ -27,7 +27,7 @@
 				<section data-markdown data-background-color="#79B635">
 					<textarea data-template>
 							### E-Security 1 - PCI DSS - Übung
-							#### Wintersemester 2018/2019
+							#### Wintersemester 2019/2020
 							FH JOANNEUM
 						</textarea>
 				</section>
@@ -37,7 +37,7 @@
 							### Aufgabenstellung
 							- "Wir möchten PCI compliant werden - wie bereiten wir uns auf das Audit vor?" - Eine Frage an die PCI Experten/Projektteam.
 							- ein Dokument je Team, gegliedert anhand der 12 Requirements, mit Verbesserungsvorschlägen damit PCI Audit erfolgreich geschafft werden kann.
-							- Abgabe per Mail (pdf) bis 28.10.2018
+							- Abgabe per Mail (pdf) bis 08.11.2019.
 						</textarea>
 				</section>
 
@@ -55,7 +55,7 @@
 				<section data-markdown data-background-color="#79B635">
 					<textarea data-template>
 							### E-Security 1 - PCI DSS - Übung
-							#### Wintersemester 2018/2019
+							#### Wintersemester 2019/2020
 							FH JOANNEUM
 						</textarea>
 				</section>
