--- a/06_pci_ue/index.html
+++ b/06_pci_ue/index.html
@@ -37,6 +37,8 @@
 							### Aufgabenstellung
 							- "Wir möchten PCI compliant werden - wie bereiten wir uns auf das Audit vor?" - Eine Frage an die PCI Experten/Projektteam.
 							- ein Dokument je Team, gegliedert anhand der 12 Requirements, mit Verbesserungsvorschlägen damit PCI Audit erfolgreich geschafft werden kann.
+							- Nicht in Details verstricken sondern Überblick geben
+							- Fehler aufzeigen - nicht "ausbessern"
 							- Abgabe per Mail (pdf) bis 08.11.2019.
 						</textarea>
 				</section>
