--- a/08_risikoanalyse_ue/index.html
+++ b/08_risikoanalyse_ue/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>ESEC1 - Risikoanalyse - Übung (2018/2019)</title>
+		<title>ESEC1 - Risikoanalyse - Übung (2019/2020)</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/white.css">
@@ -27,7 +27,7 @@
 				<section data-markdown data-background-color="#79B635">
 					<textarea data-template>
 							### E-Security 1 - Risikoanalyse - Übung
-							#### Wintersemester 2018/2019
+							#### Wintersemester 2019/2020
 							FH JOANNEUM
 						</textarea>
 				</section>
@@ -37,7 +37,7 @@
 							### Aufgabenstellung (1)
 							- Risiko Analyse für das Unternehmen <a href="https://joseftsch.github.io/esec1/06_pci_ue/">GameChamp</a>
 							- Drei sinnvolle (!) Risiken pro Team (keine doppelten/verwandten Risiken)
-							- Abgabe als PDF via Mail am Ende der Einheit / am Ende des Tages
+							- Abgabe als PDF via Mail am Ende des Tages
 						</textarea>
 				</section>
 
@@ -56,7 +56,7 @@
 				<section data-markdown data-background-color="#79B635">
 					<textarea data-template>
 							### E-Security 1 - Risikoanalyse - Übung
-							#### Wintersemester 2018/2019
+							#### Wintersemester 2019/2020
 							FH JOANNEUM
 						</textarea>
 				</section>
