--- a/12_securitystandards/index.html
+++ b/12_securitystandards/index.html
@@ -26,7 +26,7 @@
 
 				<section data-markdown data-background-color="#79B635">
 					<textarea data-template>
-							### E-Security 1 - Security Standards - 2LE
+							### E-Security 1 - Security Standards
 							#### Wintersemester 2019/2020
 							FH JOANNEUM
 						</textarea>
