--- a/13_securitynightmare/index.html
+++ b/13_securitynightmare/index.html
@@ -26,7 +26,7 @@
 
 				<section data-markdown data-background-color="#79B635">
 					<textarea data-template>
-							### E-Security 1 - Security Nightmares - 1LE
+							### E-Security 1 - Security Nightmares
 							#### Wintersemester 2019/2020
 							FH JOANNEUM
 						</textarea>
@@ -34,7 +34,7 @@
 
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
-							### Was 2018 so passierte ...
+							### Was 2018 & 2019 so passierte ...
 						</textarea>
 				</section>
 
@@ -43,6 +43,13 @@
 					<textarea data-template>
 							### "Data Breachs" in 2018
 							<img src="images/13_securitynightmare/databreaches.png" style="background:none; border:none; box-shadow:none;">
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### "Data Breachs" in 2019
+							<img src="images/13_securitynightmare/databreaches2019.png" style="background:none; border:none; box-shadow:none;">
 						</textarea>
 				</section>
 
@@ -174,6 +181,68 @@
 						</textarea>
 				</section>
 
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### "Bulgarians Tax Agency" - 1
+							- Was ist passiert?
+								- Hack der Bulgarischen Steuer-Behörde
+							- Anzahl?
+							    - 5000000 Datensätze (Name, Einkommen, Gesundheitsdaten,...)
+							    - [...] may have compromised nearly every adult’s personal records [...]
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### "Bulgarians Tax Agency" - 2
+							- ausländische Hacker übernehmen 110 Datenbanken und wollen Datensätze verkaufen
+							- Minister entschuldigt sich bei Bürger
+							- [...]the leaked information was not classified and did not endanger financial stability[...]
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### "Capital One" - 1
+							- Was ist passiert?
+								- Hack der US CapitalOne bank.
+							- Anzahl?
+							    - 100 Millionen Datensätze
+							    - sensible Finanzinformation über US- und Kanadische Bürger
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### "Capital One" - 2
+							- Gehostet auf AWS und gehackt von ex Amazon Webservice MA
+							- "She was able to gain access by exploiting a misconfigured web application firewall, according to a court filing"
+							- Was wurde getan? Benachrichtung der betroffenen Kunden, kostenloses Monitoring
+							- Geschätzte Gesamtkosten: 100-150 Millionen $
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### "Desjardins Inside-Job" - 1
+							- Was ist passiert?
+								- Leak von Datensätzen (Name, Adresse, ...) von Mitarbeiter
+							- Anzahl?
+							    - 2.7 Millionen Datensätze
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### "Desjardins Inside-Job" - 2
+							- Mitarbeiter "sammelte" Daten über Kunden über mehrere Monate hinweg.
+							- Eigener Account und "Social engineering"/Accounts der Kollegen
+							  - [...]a scheme to win the trust of his colleagues[...]
+							- Entschädigung der betroffenen Kunden - Schade kann noch nicht beziffert werden
+							  - Fraud detection, Website, ...
+						</textarea>
+				</section>
+
 				<section data-markdown data-background-color="#79B635">
 					<textarea data-template>
 							### E-Security 1 - Security Nightmares
@@ -212,6 +281,32 @@
 							  - https://arstechnica.com/tech-policy/2018/10/google-exposed-non-public-data-for-500k-users-then-kept-it-quiet/
 							  - https://www.nytimes.com/2018/10/08/technology/google-plus-security-disclosure.html
 							  - https://www.theverge.com/2018/10/8/17951890/google-plus-shut-down-security-api-change-gmail-android
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Quellenverzeichnis 4
+							- Case "Bulgarians Tax Agency":
+							  - https://www.reuters.com/article/us-bulgaria-cybersecurity/hackers-steal-millions-of-bulgarians-financial-records-tax-agency-idUSKCN1UB0MA
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Quellenverzeichnis 5
+							- Case "Capital One":
+							  - https://edition.cnn.com/2019/07/29/business/capital-one-data-breach/index.html
+							  - https://www.capitalone.com/facts2019/
+						</textarea>
+				</section>
+
+				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
+					<textarea data-template>
+							### Quellenverzeichnis 5
+							- Case "Desjardins":
+							  - https://www.cbc.ca/news/canada/montreal/desjardins-data-breach-1.5183297
+							  - https://www.desjardins.com/ca/personal-information/index.jsp
 						</textarea>
 				</section>
 
