--- a/09_securityscanning/index.html
+++ b/09_securityscanning/index.html
@@ -218,8 +218,9 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Begriffe 3: CVSS (Common Vulnerability Scoring System)
-							- Scoring von 0 bis 10
+							- Scoring von 0,0 bis 10
 							- Formel/Berechnung ua. auf Basis von CIA, Verbreitung und Ausnutzbarkeit
+							- <a href="https://nvd.nist.gov/vuln-metrics/cvss/v3-calculator">Simulator</a>
 					</textarea>
 				</section>
 
