--- a/09_securityscanning/index.html
+++ b/09_securityscanning/index.html
@@ -353,6 +353,7 @@ Service Info: OS: Linux; CPE: cpe:/o:linux:linux_kernel</code></pre>
 					<textarea data-template>
 							### OWASP Top 10 2017 und Exploit-DB
 							- <a href="https://www.owasp.org/index.php/Category:OWASP_Top_Ten_2017_Project">OWASP</a>
+							- <a href="https://www.cloudflare.com/learning/security/threats/owasp-top-10/">Cloudflare top 10</a>
 							- <a href="https://www.exploit-db.com/">exploitdb</a>
 							  - <a href="https://www.exploit-db.com/exploits/45638/">libssh</a>
 							- <a href="https://www.kitploit.com/">Kitploit</a>
