--- a/10_securityscanning_ue/index.html
+++ b/10_securityscanning_ue/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>ESEC1 - Security Scanning - Übung (2018/2019)</title>
+		<title>ESEC1 - Security Scanning - Übung (2019/2020)</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/white.css">
@@ -27,7 +27,7 @@
 				<section data-markdown data-background-color="#79B635">
 					<textarea data-template>
 							### E-Security 1 - Security Scanning - Übung
-							#### Wintersemester 2018/2019
+							#### Wintersemester 2019/2020
 							FH JOANNEUM
 						</textarea>
 				</section>
@@ -35,14 +35,14 @@
 				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
 					<textarea data-template>
 							### Aufgabenstellung
-							- Kali Linux und Nexpose VM lokal in Betrieb nehmen
+							- Kali Linux VM lokal in Betrieb nehmen
 							- Reconnaissance mit nmap (verschiedene Optionen probieren)
 							- Scannen der "verwundbaren" VMs mit Nessus, Openvas, Nexpose, ...
 								- Tunen der Optionen
 								- Herausfinden von Unterschieden in den Scanergebnissen
 								- Was ist CVSS oä. ?
 								- Scannen mit/ohne Credentials
-							- Ausprobieren und testen andere Tools von Kali Linux
+							- Ausprobieren und testen andere Tools (von Kali Linux)
 						</textarea>
 				</section>
 
@@ -58,20 +58,10 @@
 						</textarea>
 				</section>
 
-				<section data-markdown data-background-image="images/logo.jpg" data-background-position="top right 0px" data-background-size="20% auto">
-					<textarea data-template>
-							### Credentials (2)
-							#### Nexpose VM
-							- shell login: nexpose/nexpose
-							- web login: nxadmin/nxpassword
-							- key: https://www.rapid7.com/products/insightvm/download/
-						</textarea>
-				</section>
-
 				<section data-markdown data-background-color="#79B635">
 					<textarea data-template>
 							### E-Security 1 - Security Scanning - Übung
-							#### Wintersemester 2018/2019
+							#### Wintersemester 2019/2020
 							FH JOANNEUM
 						</textarea>
 				</section>
