sec scanning ue

--- a/10_securityscanning_ue/index.html
+++ b/10_securityscanning_ue/index.html
@@ -26,7 +26,7 @@
 
 				<section data-markdown data-background-color="#79B635">
 					<textarea data-template>
-							### E-Security 1 - Security Scanning - Übung
+							### E-Security 1 - Security Scanning - Übung (3LE)
 							#### Wintersemester 2019/2020
 							FH JOANNEUM
 						</textarea>
